Alignment fixes

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1936,6 +1936,14 @@ td.user-actions > span:hover {
     color: #777;
 }
 
+table.user-scope td:first-child {
+	padding-right: 20px;
+}
+
+table.user-scope tr {
+	border-bottom: 0 !important;
+}
+
 .access-table tr:last-child {
     border-bottom: 1px solid #ddd;
 }
@@ -2319,48 +2327,13 @@ div#coverage-spatial .coordinates-label-addon {
     margin-left: -1px;
 }
 
-
 /*			User profile revamp css			*/
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    margin: auto;
-    margin-top: 20px;
-}
-
-.profile-pic:before {
-    font-size: 130px;
-    width: 150px;
-    height: 150px;
-    text-align: center;
-    line-height: 100px;
-    border: 7px solid #DDD;
-    border-radius: 50%;
-    color: #2D9EB3;
-}
-
 .profile-pic-thumbnail {
     width: 40px;
     height: 40px;
     margin-right:10px;
     margin-bottom: 10px;
     float: left;
-}
-
-.dropdown-profile-pic-thumbnail {
-    width: 80px;
-    height: 80px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-
-.profile-header {
-    margin: 40px 0;
-}
-
-#exposeMask {
-    width: auto !important;
-    height: auto !important;
 }
 
 .round-image {
@@ -2372,206 +2345,6 @@ div#coverage-spatial .coordinates-label-addon {
     background-position: 50% 50%;
 }
 
-.full-width-tabs-container .panel-heading {
-    color: #757575;
-    text-shadow: 0 1px 0 #fff;
-}
-
-.nav-tabs > li > a {
-    background: #FFF;
-    color:#757575;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-/* Layout pending back end functionality */
-/*#social > div > div > ul > li {*/
-    /*border: 1px solid #0A91AB;*/
-    /*background: #FFF;*/
-    /*-webkit-border-radius: 2px;*/
-    /*-moz-border-radius: 2px;*/
-    /*border-radius: 2px;*/
-/*}*/
-
-/*#social > div > div > ul > li:hover {*/
-    /*transition: background 0.1s ;*/
-    /*-webkit-transition: background 0.1s;*/
-    /*-moz-transition: background 0.1s;*/
-    /*background:#0A91AB;*/
-/*}*/
-
-div.affiliation {
-    border-top: 1px solid #ddd;
-}
-
-.list-affiliations li {
-    overflow: auto;
-    border-top: 1px solid #ddd;
-    margin-top: 10px;
-    padding-top: 15px;
-}
-
-.list-affiliations li:first-child {
-    border-top: 0;
-    padding-top: 0;
-    margin-top: 0;
-}
-
-.activity-block {
-    margin-right: 0;
-    margin-left: 0;
-    color: #555;
-}
-
-#overview .activity-block {
-    float: left;
-    padding-top: 10px;
-    width: 100%;
-    border-top: 1px solid #ddd;
-    margin-top: 10px;
-}
-
-.activity-info {
-    margin-bottom: 5px;
-}
-
-.activity-info > span.title {
-    font-size: 16px;
-}
-
-.activity-info h5 {
-	margin: 2px 0;
-}
-.metadata-wrapper {
-    margin-left: 50px;
-    margin-bottom: 20px;
-}
-
-.metadata-wrapper > h5 {
-    margin: 2px 0;
-}
-
-.activity-description {
-    float: left;
-    border-left: 3px solid #CCC;
-    max-height: 50px;
-    overflow: hidden;
-    margin-bottom: 5px;
-    margin-top: 10px;
-}
-
-.contribution .activity-description {
-    margin-left: 15px;
-}
-
-#overview .activity-block:first-child {
-    border-top: 0;
-    margin-top: 0;
-    padding-top:0;
-}
-
-.show-more-btn {
-    width: 50px;
-    margin-left: 10px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    text-align: center;
-    color: #AAA;
-    border: 1px solid #ddd;
-    font-size: 12px;
-    cursor: pointer;
-    float: left;
-}
-
-#div_id_abstract textarea, #id_statement {
-    resize: vertical;
-}
-
-form.act-on-request button {
-	clear: none;
-}
-
-form.act-on-request {
-    text-align: center;
-	margin:10px;
-	display: inline;
-}
-
-table.overview tr > td:first-child {
-    padding-right: 10px;
-}
-
-.icon-resource-type {
-    text-align: center;
-    border: 1px solid #ddd;
-    padding: 8px;
-    border-radius: 0 0 4px 4px;
-    background-color: #FFF;
-}
-
-.icon-resource-type > span {
-    color: #757575;
-	text-shadow: 0 1px 0 #fff;
-}
-
-.icon-resource-type, .contribution {
-    box-shadow: 1px 1px 5px #E8E8E8;
-    -moz-box-shadow: 1px 1px 5px #E8E8E8;
-    -webkit-box-shadow: 1px 1px 5px #E8E8E8;
-}
-
-.icon-resource-type {
-	padding: 20px 10px;
-}
-
-.icon-resource-type > .glyphicon{
-    font-size: 18px;
-    color: #35AAC0;
-    top: 3px;
-}
-
-.icon-resource-type-wrapper {
-    float: right;
-    margin-top: -12px;
-    margin-right: 20px;
-    margin-bottom: 10px;
-}
-
-.table-res-type-icon {
-    background-color: #FFF;
-    border: 1px solid #ddd;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-
-.table-user-contributions tbody > tr > td {
-    border: 0;
-    cursor:pointer;
-}
-
-.table-user-contributions tr {
-    border: 1px solid #DDD;
-}
-
-.table-user-contributions tbody > tr.active {
-    border-left: 2px solid #0A91AB;
-    pointer-events: none;
-}
-
-.table-user-contributions tbody > tr.active td:first-child {
-    font-weight:bold;
-}
-
-.contribution {
-    border: 1px solid #ddd;
-    margin-bottom: 20px;
-    padding: 10px 0;
-}
 
 h4.title {
     border-bottom: 1px solid #ddd;
